--- a/telegraf-global.conf
+++ b/telegraf-global.conf
@@ -17,7 +17,7 @@
 
 [[outputs.influxdb_v2]]
   tagpass = ["host"]
-  urls = ["@{systemd:influx_url}"]
+  urls = ["${INFLUX_URL}"]
   token = "@{systemd:influx_token_hosts}"
   organization = "home"
   bucket = "hosts"
